--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: ChatGPT Codex Home Assistant Add-ons
+name: Codex Command Center Home Assistant Add-ons
 url: "https://github.com/OWNER/chatgpt-codex-home-assistant"
-maintainer: "Codex"
+maintainer: "Codex Command Center"
