--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Codex Command Center Home Assistant Add-ons
+name: Home Assistant Codex Command Center Add-ons
 url: "https://github.com/OWNER/chatgpt-codex-home-assistant"
 maintainer: "Codex Command Center"
